# django-project

./: cookiecutter.json
{{ cookiecutter.project_name }}/: .env  .gitignore  Pipfile  pyproject.toml
{{ cookiecutter.project_name }}/src/: manage.py  pytest.ini  resetdb
{{ cookiecutter.project_name }}/src/tests/{{ cookiecutter.app_name }}/: {{ cookiecutter.app_name }}_test.py
{{ cookiecutter.project_name }}/src/tests/{{ cookiecutter.project_name }}_auth/: {{ cookiecutter.app_name }}_auth_test.py  {{ cookiecutter.project_name }}_auth_test.py
{{ cookiecutter.project_name }}/src/{{ cookiecutter.app_name }}/: apps.py  models.py  tasks.py  urls.py  views.py
{{ cookiecutter.project_name }}/src/{{ cookiecutter.app_name }}/templates/{{ cookiecutter.app_name }}/: base.html  header.html  index.html
{{ cookiecutter.project_name }}/src/{{ cookiecutter.project_name }}_auth/: apps.py  models.py  urls.py
{{ cookiecutter.project_name }}/src/{{ cookiecutter.project_name }}_auth/template/{{ cookiecutter.project_name }}_auth/: login.html
{{ cookiecutter.project_name }}/src/{{ cookiecutter.project_name }}_auth/templates/{{ cookiecutter.project_name }}_auth/: login.html
{{ cookiecutter.project_name }}/src/{{ cookiecutter.project_name }}auth/: urls.py
{{ cookiecutter.project_name }}/src/{{cookiecutter.project_name}}_django/: settings.py  urls.py
{{ cookiecutter.project_name }}/src/{{cookiecutter.project_name}}_project/: asgi.py  settings.py  urls.py  wsgi.py
{{ cookiecutter.project_name }}/src/{{cookiecutter.project_name}}_project/templates/: base.html  header.html
