[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "first poetry project"
authors = ["Ailenei Dan <dan.ailenei@rover.com>"]

[tool.poetry.dependencies]
python = "{{ cookiecutter.python_version }}"
{% for req in cookiecutter.requirements.split()|sort -%}
{% if "[" in req and "]" in req %}
{{ req[:req.index("[")] }} = {version = "*", extras = ["{{ req[req.index("[") + 1:req.index("]")] }}"]}
{% else %}
{{ req }} = "*"
{% endif %}
{% endfor %}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
